# 2604_hermes_hub

./: .env.example  .gitignore  260625_Hermes_Agent_Hub_WPS_SRS_v1.7.md  260626_Hermes_Agent_Hub_WPS_SRS_v2.0.md  README.md  pyproject.toml
.github/workflows/: ci.yml
app/: __init__.py  main.py
app/api/: dependencies.py
app/core/: config.py  message_types.py  security.py  session.py  tokens.py
app/db/: __init__.py  schema.py  session.py
app/models/: __init__.py  agent_event.py  agent_message.py  agent_session.py  agent_token.py  hermes_agent.py  user.py
app/schemas/: admin.py  admin_agents.py  admin_dashboard.py  admin_events.py  admin_messages.py  agent_token.py  agents.py  auth.py  events.py  messages.py
tests/: conftest.py  test_admin_agents_api.py  test_admin_agents_service.py  test_admin_api.py  test_admin_dashboard_api.py  test_admin_dashboard_service.py  test_admin_events_api.py  test_admin_events_service.py  test_admin_messages_api.py  test_admin_messages_service.py  test_admin_seed.py  test_admin_web_shell.py  test_agent_dependencies.py  test_agent_tokens_api.py  test_agent_tokens_service.py  test_agents_api.py  test_agents_service.py  test_auth_api.py  test_auth_service.py  test_config.py  test_db_session.py  test_development_environment.py  test_events_api.py  test_events_service.py  test_healthz.py  test_hermes_gateway_hook_handler.py  test_hermes_smoke_client.py  test_message_types.py  test_messages_api.py  test_messages_service.py  test_security.py  test_session.py  test_tokens.py
tools/: __init__.py  hermes_smoke_client.py
(+25 files in other folders)
